--- a/unilab2019/Properties/Resources.resx
+++ b/unilab2019/Properties/Resources.resx
@@ -127,14 +127,11 @@
   <data name="GameHome" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\GameHome.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="startButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\startButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="もし1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\もし.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Wall" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Wall.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="startButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\startButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="back" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -144,6 +141,9 @@
   </data>
   <data name="ずっと1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\ずっと.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Wall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Wall.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="もし" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\もし.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,13 +160,16 @@
   <data name="ずっと" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\ずっと.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AllStageClear" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\AllStageClear.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ステージ選択1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\ステージ選択.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="繰り返し1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\繰り返し.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="AllStageClear" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\AllStageClear.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="stageSelect.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\stageSelect.png.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
